--- a/src/template.html
+++ b/src/template.html
@@ -6,6 +6,120 @@
 		<title>Document</title>
 	</head>
 	<body>
-		<h1>Hello</h1>
+		<div class="app">
+			<div class="header">
+				<div class="logo">
+					<svg
+						xmlns="http://www.w3.org/2000/svg"
+						height="24px"
+						viewBox="0 -960 960 960"
+						width="24px"
+						fill="#e3e3e3"
+					>
+						<path
+							d="m424-296 282-282-56-56-226 226-114-114-56 56 170 170Zm56 216q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q134 0 227-93t93-227q0-134-93-227t-227-93q-134 0-227 93t-93 227q0 134 93 227t227 93Zm0-320Z"
+						/>
+					</svg>
+				</div>
+				<h1>Top Todo</h1>
+			</div>
+			<div class="content">
+				<div class="sidebar">
+					<div class="create-project">
+						<button id="add-project-button">Create Project</button>
+					</div>
+					<div class="projects"></div>
+				</div>
+				<div class="todos-container">
+					<ul>
+						<li>Item 1</li>
+						<li>Item 2</li>
+						<li>Item 3</li>
+					</ul>
+				</div>
+			</div>
+			<dialog id="add-project-dialog" closedby="any">
+				<div>
+					<h2>Add Project</h2>
+					<form method="dialog">
+						<div class="form-row">
+							<label for="project-name">Name</label>
+							<input
+								type="text"
+								name="project-name"
+								id="project-name"
+							/>
+						</div>
+						<div class="form-row">
+							<label for="project-description">Description</label>
+							<textarea
+								name="project-description"
+								id="project-description"
+							></textarea>
+						</div>
+						<div class="form-row">
+							<button id="create-project-button">Create</button>
+						</div>
+					</form>
+				</div>
+			</dialog>
+			<dialog id="add-todo-dialog" closedby="any">
+				<div>
+					<h2>Add Todo</h2>
+					<form method="dialog">
+						<div class="form-row">
+							<label for="todo-title">Title</label>
+							<input
+								type="text"
+								name="todo-title"
+								id="todo-title"
+							/>
+						</div>
+						<div class="form-row">
+							<label for="todo-description">Description</label>
+							<textarea
+								name="todo-description"
+								id="todo-description"
+							></textarea>
+						</div>
+						<div class="form-row">
+							<label for="todo-due-date">Due Date</label>
+							<input
+								type="date"
+								name="todo-due-date"
+								id="todo-due-date"
+							/>
+						</div>
+						<div class="form-row">
+							<label for="todo-priority">Priority</label>
+							<select name="todo-priority" id="todo-priority">
+								<option value="low">Low</option>
+								<option value="medium">Medium</option>
+								<option value="high">High</option>
+							</select>
+						</div>
+						<div class="form-row">
+							<label for="todo-project-select">Project</label>
+							<select
+								name="todo-project-select"
+								id="todo-project-select"
+							></select>
+						</div>
+						<div class="form-row">
+							<button id="create-todo-button">Create</button>
+						</div>
+					</form>
+				</div>
+			</dialog>
+			<div id="add-todo-button">
+				<button>Add Todo</button>
+			</div>
+			<div class="footer">
+				<p>
+					Created by
+					<a href="https://github.com/greenaltambe">greenaltambe</a>
+				</p>
+			</div>
+		</div>
 	</body>
 </html>
