--- a/src/template.html
+++ b/src/template.html
@@ -7,8 +7,8 @@
 	</head>
 	<body>
 		<div class="app">
-			<div class="header">
-				<div class="logo">
+			<div class="header" id="header">
+				<div id="logo">
 					<svg
 						xmlns="http://www.w3.org/2000/svg"
 						height="24px"
